Add pics and init words for vglass.
Hide deadvi system.

--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -18,7 +18,7 @@
 
 \input{vdp_testsys.tex}   % p5/vdp_testsys.tex       % ??
 
-\input{deadvi_testsys.tex} % p5/deadvi_testsys.tex   % ??
+% \input{deadvi_testsys.tex} % p5/deadvi_testsys.tex   % ??
 
 
 
