vglass up to conclusions

--- a/p5/vglass_testsys.tex
+++ b/p5/vglass_testsys.tex
@@ -156,6 +156,7 @@ $x_0$ демонстрирует различные виды динамик, в 
 то для идентификации имеет смысл рассмотреть набор методов,
 рассматриваемых в данной работе.
 
+% }}}2
 
 \subsection{Анализ и выбор критерия}  % {{{2
 
@@ -202,9 +203,188 @@ $x_0$ демонстрирует различные виды динамик, в 
 
 \subsection{Тестовая задача идентификации}  % {{{2
 
+Для идентификации параметра $x_0$
+колебательной системы с гистерезисной возвращающей силой
+была использована группа методов  ``ql3rlWvnAAW''.
+Использование критерия $q_{rx}$ для данной системы,
+с учетом наличия участков отсутствия монотонности
+требует отдельной проверки работоспособности,
+так как используемый ранее подход с
+медленно изменяющимся параметром (\ref{atu:eq:po_t_ramp}) не позволяет
+отделить ошибку, связанную с установлением режима системы идентификации
+от ошибки, вызванной не вполне адекватным критерием.
+
+Для определения ошибки идентификации без влияния переходных процессов,
+была проведена серия вычислительных экспериментов.
+К каждом из них значения параметра $x_0$ было фиксировано.
+Диапазон изменения этого параметра был выбран $[0.2 ; 0.6]$.
+Предварительно была сделана проверка, что за полное время идентификации
+$T= 1000$ все переходные процессы действительно завершились.
+Зависимость полученной ошибки идентификации от значения
+параметра $x_0$ для различных способов оценивания $p_\mathrm{id}$
+представлена на рис.~\ref{atu:f:vg_id_scan}.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.60\textwidth]{p/cha/vg/vg_id-p_p_e_ql3rlWvnAAW_scan.png}
+\end{center}
+  \caption{Зависимости $e(x_0) $ для колебательной системы с гистерезисной возвращающей силой}
+\label{atu:f:vg_id_scan}
+\end{figure}
+
+Анализ полученных зависимостей показывает, что в тех областях, где нарушается монотонность
+критерия, ошибка идентификации значительно возрастает.
+Однако, уровень этой ошибки, за исключением одной узкой области,
+не превышает исходного расстояния между агентами,
+что позволяет сделать вывод том, что система идентификации оказывается работоспособной
+и этом неблагоприятном случае.
+
+Рассмотрим динамику агентов и идентифицируемого значения (рис.~\ref{atu:f:vg_id_sign}) в случае
+существенно нестационарного параметра.
+При этом динамика величины $x_0(t)$ задаётся (\ref{atu:eq:po_t_sign}),
+$p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_t_pi_ql3rlWvnAAW_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_t_p_ql3rlWvnAAW_sign.png}
+\end{center}
+  \caption{Динамика агентов и идентифицируемого значения для системы колебательной системы с гистерезисной возвращающей силой при условии (\ref{atu:eq:po_t_sign})}
+\label{atu:f:vg_id_sign}
+\end{figure}
+
+В рассматриваемых условиях на величину ошибки идентификации
+негативно влияют два фактора: примыкающий к нулевой частоте
+участок сплошного спектра, а также отсутствие монотонности критерия
+в области минимального значения параметра.
+Это приводит к значительным ошибкам в процессе идентификации,
+при сохранении работоспособности метода.
+
+
+На рис.~\ref{atu:f:vg_id_sin}
+приведены аналогичные зависимости, то при условии~(\ref{atu:eq:po_t_sign}).
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_t_pi_ql3rlWvnAAW_sin.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_t_p_ql3rlWvnAAW_sin.png}
+\end{center}
+  \caption{Динамика агентов и идентифицируемого значения для системы колебательной системы с гистерезисной возвращающей силой при условии (\ref{atu:eq:po_t_sin})}
+\label{atu:f:vg_id_sin}
+\end{figure}
+
+Более плавное изменение параметра,
+как и в предыдущих случаях,
+приводит к уменьшению ошибки идентификации.
+Однако, вид критерия не позволяет получить
+достаточно малую ошибку идентификации.
+
+
+
 % }}}2
 
 \subsection{Влияние параметров системы идентификации на ошибку идентификации}  % {{{2
+
+Влияние параметра $a_q$ на ошибку идентификации
+для колебательной системы с гистерезисной возвращающей силой
+имеет вид, типичный для систем со спектром,
+примыкающим к нулевой частоте~(рис.~\ref{atu:f:vg_e_a_q}).
+Нет явно выраженного минимума, что свидетельствует
+об ограниченности фильтрующих свойств подхода к усреднению критерия.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_a_q_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_a_q_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(a_q)$ для колебательной системы с гистерезисной возвращающей силой}
+\label{atu:f:vg_e_a_q}
+\end{figure}
+
+На фоне относительно высокой ошибки идентификации,
+определяемой свойствами критерия,
+зависимость от масштаба функции качества
+(рис.~\ref{atu:f:vg_e_q_gamma})
+пренебрежимо мала, если, конечно,
+параметр $q_\gamma$ системы идентификации
+находится в разумных пределах.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_q_gamma_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_q_gamma_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(q_\gamma)$ для колебательной системы с гистерезисной возвращающей силой}
+\label{atu:f:vg_e_q_gamma}
+\end{figure}
+
+Свойства критерия $q_{rx}$ для данной системы
+также обуславливают слабую зависимость ошибки идентификации
+от параметра $v_f$ (рис.~\ref{atu:f:vg_e_v_f}).
+Для быстро изменяющегося параметра перемещение агентов
+может быть не порванным.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_v_f_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_v_f_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(v_f)$ для колебательной системы с гистерезисной возвращающей силой}
+\label{atu:f:vg_e_v_f}
+\end{figure}
+
+Совершенно аналогичная картина наблюдается для параметра $k_e$~(рис.~\ref{atu:f:vg_e_k_e}).
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_k_e_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_k_e_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(k_e)$ для колебательной системы с гистерезисной возвращающей силой}
+\label{atu:f:vg_e_k_e}
+\end{figure}
+
+Вид зависимости $\bar{e}(k_{nl})$ для рассматриваемой системы имеет определённые
+отличия~(рис.~\ref{atu:f:vg_e_k_nl}).
+Слабо выраженный, но всё же заметный минимум наблюдается
+при значениях $k_{nl}$, практически совпадающих с используемым значением $k_e$.
+Это можно объяснить тем, что большее квазиравновесное расстояние
+между агентами позволяет в какой-то мере нивелировать
+возмущения критерия небольшой амплитуды.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_k_nl_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_k_nl_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(k_{nl})$ для колебательной системы с гистерезисной возвращающей силой}
+\label{atu:f:vg_e_k_nl}
+\end{figure}
+
+Использование неоднозначного критерия,
+в совокупности с ограничениями на перемещения агентов
+делает зависимость $\bar{e}(k_{cl})$ (рис.~\ref{atu:f:vdp_e_k_cl})
+практически не наблюдаемой.
+
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_k_cl_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_k_cl_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(k_{cl})$ для колебательной системы с гистерезисной возвращающей силой}
+\label{atu:f:vg_e_k_cl}
+\end{figure}
+
+
 
 % }}}2
 
@@ -216,8 +396,33 @@ $x_0$ демонстрирует различные виды динамик, в 
 так и процессов идентификации её параметра $x_0$
 позволяют в сделать следующие выводы:
 
+\begin{itemize}
+
+  \item
+    Колебательная система с гистерезисной возвращающей силой
+    под воздействием внешней гармонического возмущения
+    может демонстрировать различные виды динамик, в
+    том числе сложно-периодическую и хаотическую.
+
+
+  \item
+    Критерий $q_{rx}$ хоть и подходит для идентификации параметра ``$x_0$''
+    колебательной системы с гистерезисной возвращающей силой,
+    но обладает нарушениями монотонности,
+    что существенно увеличивает ошибку идентификации.
+
+  \item
+    Наличие сплошного спектра системы, примыкающего к нулевой частоте,
+    усложняет задачу корректного усреднения критерия.
+
+  \item
+    Группа методов ql3rlWvnAAW показала свою хорошую работоспособность
+    даже в условиях использования критерия с ограниченной применимостью.
+
+
+\end{itemize}
 % }}}2
 
 % }}}1
 
-% vim: fdm=marker ft=tex
+% vim: fdm=marker foldlevel=1 foldignore="%#" fdc=4 ft=tex
